# FMNet-pytorch

./: .gitignore  README.md  model.py  preprocess.py  requirement.txt  train.py  utils.py
data/faust/raw/: 002.off  003.off  005.off  006.off  007.off  008.off  009.off  010.off  011.off  013.off  016.off  017.off  018.off  020.off  023.off  024.off  026.off  027.off  028.off  029.off  037.off  038.off  042.off  043.off  044.off  045.off  046.off  047.off  052.off  054.off  056.off  057.off  058.off  059.off  062.off  066.off  067.off  069.off  070.off  071.off  (+15 more)
data/faust/raw/correspondences/: 001.vts  002.vts  003.vts  004.vts  005.vts  006.vts  007.vts  008.vts  009.vts  010.vts  011.vts  012.vts  013.vts  014.vts  015.vts  016.vts  017.vts  018.vts  019.vts  020.vts  021.vts  022.vts  023.vts  024.vts  025.vts  026.vts  027.vts  028.vts  029.vts  030.vts  031.vts  032.vts  033.vts  034.vts  035.vts  036.vts  037.vts  038.vts  039.vts  040.vts  (+59 more)
data/faust/raw/shapes/: 000.off  001.off  004.off  012.off  014.off  015.off  019.off  021.off  022.off  025.off  030.off  031.off  032.off  033.off  034.off  035.off  036.off  039.off  040.off  041.off  048.off  049.off  050.off  051.off  053.off  055.off  060.off  061.off  063.off  064.off  065.off  068.off  072.off  073.off  074.off  075.off  077.off  079.off  083.off  087.off  (+5 more)
data/shot/: CMakeLists.txt
fmnet/: faust_dataset.py  loss.py  model.py  preprocess.py  train.py
fmnet/utils/: io.py  laplace_decomposion.py  laplace_decomposition.py
fmnet/utils/shot/: shot.cpp
